2006-04-10  Stepan Kasal  <kasal@ucw.cz>

	* NEWS: Fix typo.

2006-04-09  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/Variable.pm (_hash_varname, _hash_values): New functions.
	(_gen_varname): Use _hash_values, and return a flag indicating whether
	the variable name was generated or reused.
	(transform_variable_recursively): Do not redefine variables that
	are reused, and try to reuse the variable being transformed.
	* tests/check2.test: Make sure TESTS hasn't been redefined.
	* tests/check5.test, tests/exeext4.test: Make sure variables have
	been reused.
	* tests/subst2.test: Make sure bin_PROGRAMS gets rewritten.

	* automake.in (%ignored_configure_vars): New variable.
	(scan_autoconf_traces): Trace for _AM_SUBST_NOTMAKE and fill
	%ignored_configure_vars.
	(define_configure_variable): Declare ignored configure variables
	as VAR_SILENT.  Do not special-case AMDEPBACKSLASH and ANSI2KNR
	w.r.t. VAR_SILENT.
	* m4/substign.m4: New file.
	* m4/Makefile.am (dist_m4data_DATA): Add substign.m4.
	* m4/cond.m4: _AM_SUBST_NOTMAKE $1_TRUE and $1_FALSE (PR automake/477).
	* m4/depend.m4: _AM_SUBST_NOTMAKE AMDEPBACKSLASH.
	* m4/protos.m4: _AM_SUBST_NOTMAKE ANSI2KNR.
	* tests/cond.test: Make sure TEST_FALSE and TEST_TRUE are not defined.
	* tests/amsubst.test: New file.
	* tests/Makefile.am (TESTS): Add it.

2006-04-09  Stepan Kasal  <kasal@ucw.cz>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* automake.in (handle_single_transform): Preserve directories in
	direct suffix rules.
	* tests/suffix12.test: New test.
	* tests/Makefile.am (TESTS): Add it.
	Report from John Ratliff.

2006-03-25  Mike Frysinger  <vapier@gentoo.org>  (tiny change)
	    Alexandre Duret-Lutz  <adl@gnu.org>

	* aclocal.in ($m4_include_rx): Do not recognize `include', and
	adjust scan_configure_dep and scan_file accordingly.
	(scan_configure_dep): Do not search white lines.
	(scan_file): Strip comments from current line after checking