@@ -1,3 +1,8 @@
+2006-04-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* m4/lispdir.m4 (AM_PATH_LISPDIR): Require Autoconf 2.59c,
+	because it uses `datarootdir'.  Bump copyright year and serial.
+
 2006-04-10  Stepan Kasal  <kasal@ucw.cz>
 
 	* NEWS: Fix typo.
